update js files
remove women.js , men.js and use one js sheet to all pages as they have the same functionality

--- a/menpage.html
+++ b/menpage.html
@@ -492,13 +492,13 @@
             </div>
         </div>
         <!-- end Accessories -->
-        <a href="CartPage.html" class="btn  mt-2 mb-2"  onclick="display()" >Submit</a>
+        <a class="btn sub mt-2 mb-2" href="CartPage.html" >Submit</a>
         <!-- scroll -->
         <div class="scroll">
             <img onclick="animateToTop()" class="scrolimg" src="images/arrow-up-circle-fill.svg">
         </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/men.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
