--- a/womenpage.html
+++ b/womenpage.html
@@ -506,6 +506,6 @@
         </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/women.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
