--- a/CartPage.html
+++ b/CartPage.html
@@ -22,7 +22,7 @@
                 </tr>
             </thead>
             <tbody class="tbody">
-                <tr class="tr">
+                <!-- <tr class="tr">
                     <td class="pname">Black & White Round & White Round </td>
                     <td><input class="m-1" type="number" value="1"></td>
                     <td>20$</td>
@@ -40,15 +40,18 @@
                 <tr class="tr">
                     <td colspan="2">total price : </td>
                     <td>250$</td>
-                </tr>
+                </tr> -->
             </tbody>
         </table>
+        <div class="nody">
+
+        </div>
         <a class="btn "> buy </a>
     </div>
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/men.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
