--- a/womenpage.html
+++ b/womenpage.html
@@ -499,7 +499,9 @@
             </div>
         </div>
         <!-- end Accessories -->
-        <a href="CartPage.html" class="btn  mt-2 mb-2" onclick="display()" >Submit</a>
+        <form action="CartPage.html" class="forma">
+            <button class="btn submit mt-2 mb-2" type="submit" >Submit</button>
+        </form>
         <!-- scroll -->
         <div class="scroll">
             <img onclick="animateToTop()" class="scrolimg" src="images/arrow-up-circle-fill.svg">
