--- a/CartPage.html
+++ b/CartPage.html
@@ -22,36 +22,15 @@
                 </tr>
             </thead>
             <tbody class="tbody">
-                <!-- <tr class="tr">
-                    <td class="pname">Black & White Round & White Round </td>
-                    <td><input class="m-1" type="number" value="1"></td>
-                    <td>20$</td>
-                </tr>
-                <tr class="tr">
-                    <td>Black & White Round & White Round</td>
-                    <td><input class="m-1" type="number" value="1"></td>
-                    <td>20$</td>
-                </tr>
-                <tr class="tr">
-                    <td>Black & White Round & White Round</td>
-                    <td><input class="m-1" type="number" value="1"></td>
-                    <td>20$</td>
-                </tr>
-                <tr class="tr">
-                    <td colspan="2">total price : </td>
-                    <td>250$</td>
-                </tr> -->
+                
             </tbody>
         </table>
-        <div class="nody">
-
-        </div>
-        <a class="btn "> buy </a>
+        <button class="btn "> buy </button>
     </div>
 
 
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/cartpage.js" defer></script>
 </body>
 
 </html>
