--- a/menpage.html
+++ b/menpage.html
@@ -492,13 +492,15 @@
             </div>
         </div>
         <!-- end Accessories -->
-        <a class="btn sub mt-2 mb-2" href="CartPage.html" >Submit</a>
+        <form action="CartPage.html" class="forma">
+            <button class="btn submit mt-2 mb-2" type="submit" >Submit</button>
+        </form>
         <!-- scroll -->
         <div class="scroll">
             <img onclick="animateToTop()" class="scrolimg" src="images/arrow-up-circle-fill.svg">
         </div>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" defer></script>
 </body>
 </html>
