--- a/menpage.html
+++ b/menpage.html
@@ -138,7 +138,7 @@
                 <div class="card-body">
                     <h5 class="card-title">White & Black Round Neck T-Shirt</h5>
                     <p class="card-text text-dark h4">50$</p>
-                    <i class="bi bi-cart-check-fill fs-6" onclick="Tshertscouter()" data-bs-toggle="collapse"
+                    <i class="bi bi-cart-check-fill fs-6"  data-bs-toggle="collapse"
                         data-bs-target="#t9"></i>
                     <span id="t9" class="collapse">&#9989;</span>
                 </div>
