finish cart page
add remove button to remove item from cart list and calculate total price and display it

--- a/CartPage.html
+++ b/CartPage.html
@@ -18,14 +18,14 @@
                 <tr>
                     <th scope="col">product</th>
                     <th scope="col">quantity</th>
-                    <th scope="col">price</th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody class="tbody">
-                
+
             </tbody>
         </table>
-        <button class="btn "> buy </button>
+        <button class="btn "> Buy </button>
     </div>
 
 
